# li-fi

./: .gitattributes  .gitignore  Cargo.toml  Embed.toml  README.md  setup.fzz
Schematics/: Schematics.kicad_pro  Schematics.kicad_sch  nucleo.kicad_sch
discovery/: Cargo.toml  Embed.toml
discovery/src/: main.rs
measurements/: measurements.csv  measurements2.csv
nucleo/: .gitattributes  Cargo.toml  Embed.toml
nucleo/src/: main.rs
src/: main.rs
