[package]
name = "blink"
version = "0.1.0"
authors = ["Eugene Lomov <eugene.v.lomov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.7"
panic-halt = "0.2.0"

[dependencies.stm32f7xx-hal]
version = "0.3.0"
features = ["stm32f767", "rt"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
