[package]
name = "discovery"
version = "0.1.0"
authors = ["Eugene Lomov <eugene.v.lomov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.0"
micromath = "2.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
reed-solomon = "0.2.1"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
#stm32f3 = { version = "0.14.0", features = [ "stm32f303" ] }
#stm32f3-discovery = "0.7.2"
stm32f3xx-hal = { version = "0.9.0", features = ["ld", "rt", "stm32f303xc"] }
tinyvec = {version = "1.6.0", features = ["rustc_1_57"]}
