[package]
name = "blink"
version = "0.1.0"
authors = ["Eugene Lomov <eugene.v.lomov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.6.7"
micromath = "2.0.0"
panic-halt = "0.2.0"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
tinyvec = {version = "1.6.0", features = ["rustc_1_57"]}

[dependencies.stm32f7xx-hal]
version = "0.6.0"
features = ["stm32f767", "rt"]
